# VKEngine

./: .gitignore  CMakeLists.txt  README.md  clean.bat  compile.bat
app/: CMakeLists.txt
app/src/: App.cpp  App.h  main.cpp
cmake/: compiler_warnings.cmake  shaders.cmake
engine/: CMakeLists.txt
engine/shaders/: simple_shader.frag  simple_shader.vert
engine/src/: GameObject.h
engine/src/Core/: Logger.cpp  Logger.h
engine/src/Graphics/: Device.cpp  Device.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
